force-app/main/default/objects/Announcement__c/Announcement__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - the object uses for the important announcements of each editions if defined</description>
    <label>Announcement</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Announcement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>