force-app/main/default/objects/Announcement__c/fields/Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Date__c</fullName>
    <description>Publish date of announcement</description>
    <label>Announcement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>