force-app/main/default/objects/Announcement__c/fields/Booth_Product_Types__c.field-meta.xml
<CustomField>
    <fullName>Booth_Product_Types__c</fullName>
    <label>Booth/Product Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booth_Product_Type1</valueSetName>
    </valueSet>
</CustomField>