force-app/main/default/objects/Announcement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of announcement</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>