force-app/main/default/objects/Announcement__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition for which Announcement has been made.</description>
    <label>Event Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Announcements</relationshipLabel>
    <relationshipName>Announcements</relationshipName>
    <type>Lookup</type>
</CustomField>