force-app/main/default/objects/Announcement__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal Link to the announcement if any shows that the user can open the announcement and read in.</description>
    <label>Internal Tab</label>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>Announcements</relationshipLabel>
    <relationshipName>Announcements</relationshipName>
    <type>Lookup</type>
</CustomField>