force-app/main/default/objects/Announcement__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Announcement will show only when it has been made active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>