force-app/main/default/objects/Announcement__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <description>Type Of Link to announcement if any show that user can open the announcement and read in.</description>
    <label>Link Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>