force-app/main/default/objects/Announcement__c/fields/Sub_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Text__c</fullName>
    <description>Sub header will show bellow the header text</description>
    <label>Sub Header Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>