force-app/main/default/objects/Announcement__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title or main headline of announcement.</description>
    <inlineHelpText>Title or main headline of announcement.</inlineHelpText>
    <label>Header Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>