force-app/main/default/objects/Announcement__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Link to announcement if any show that user can open the announcement and read in.</description>
    <inlineHelpText>Link to announcement if any show that user can open the announcement and read in.</inlineHelpText>
    <label>External Link</label>
    <type>Url</type>
</CustomField>