force-app/main/default/objects/Announcement__c/fields/URL_Label__c.field-meta.xml
<CustomField>
    <fullName>URL_Label__c</fullName>
    <description>Label for link of announcement.</description>
    <label>External/Internal Link Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>